adapt workflow call input name change mctools/dgcode#28

--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -13,4 +13,4 @@ jobs:
       pkg-repo: ess-dg/dgcode_projects
       pkg-repo-branch: '${{ github.ref_name }}'
       dgcode-branch: main
-      setup-choice: defaults
+      platform-choice: defaults
