--- a/.github/workflows/condatest.yml
+++ b/.github/workflows/condatest.yml
@@ -38,6 +38,7 @@ jobs:
         with:
           path: ./src_co
 
+      #we need actions and .yml files in the simplebuild-dgcode repo:
       - name: Checkout simplebuild-dgcode repo
         uses: actions/checkout@v4
         with:
@@ -52,34 +53,35 @@ jobs:
           CACHED_NOARCH_DEF_PY_FILE: ./src_co_sbdgcode/.github/resources/cached_noarch_definitions.py
           CONDA_ENV_FILE : ./src_co_sbdgcode/.github/resources/conda-setup.yml
 
-      - name: Install simplebuild and dgcode
+      - name: Install dgcode
         run: |
-          set -eu
+          #not set -u due to conda
+          set -e
           conda install --yes simple-build-dgcode
           echo "sb --version: "$(sb --version)
           echo "geant4 version: "$(geant4-config  --version)
 
-      - name: Build and test Core only
-        id: build-and-test-core-only
-        run: |
-          set -eu
-          mkdir test_core && cd test_core
-          sb --init core_val
-          sb -t --testexcerpts=100 --requirepkg=CoreTests
-
-      - name: Build and test release mode
-        id: build-and-test-release-mode
-        run: |
-          set -eu
-          cd ./src_co
-          sb -t --testexcerpts=100 --requirepkg=DGCodeRecommended,G4SimPlaneScatter
-          sbenv sb_core_extdeps --require ZLib NCrystal Geant4
-
-      - name: Build-and-test-debug-mode
-        id: build-and-test-debug-mode
-        run: |
-          set -eu
-          echo TODO
+###TMP      - name: Build and test Core only
+###TMP        id: build-and-test-core-only
+###TMP        run: |
+###TMP          set -eu
+###TMP          mkdir test_core && cd test_core
+###TMP          sb --init core_val
+###TMP          sb -t --testexcerpts=100 --requirepkg=CoreTests
+###TMP
+###TMP      - name: Build and test release mode
+###TMP        id: build-and-test-release-mode
+###TMP        run: |
+###TMP          set -eu
+###TMP          cd ./src_co
+###TMP          sb -t --testexcerpts=100 --requirepkg=DGCodeRecommended,G4SimPlaneScatter
+###TMP          sbenv sb_core_extdeps --require ZLib NCrystal Geant4
+###TMP
+###TMP      - name: Build-and-test-debug-mode
+###TMP        id: build-and-test-debug-mode
+###TMP        run: |
+###TMP          set -eu
+###TMP          echo TODO
 
       - name: Setup tmate session for manual debugging
         uses: mxschmitt/action-tmate@v3
