--- a/simplebuild.cfg
+++ b/simplebuild.cfg
@@ -10,3 +10,6 @@
               #tests, to verify that everything works for you:
               #  ,"dgcode_val"
             ]
+[build]
+  #Change the mode to 'debug' to build binaries with debug symbols:
+  mode = 'release'
